# PDFRegenerator

./: LICENSE  Pipfile  README.md  auto_commit.sh  pyproject.toml
.github/workflows/: workflow.yml
pdf_regenerator/: __main__.py
tests/asset/: RAID.ppt  RAID.pptx
