[project]
name = "pdf_regenerator"
version = "0.0.20240308184040"
authors = [{name="Talbot3",email="1796560392@qq.com"}]
description = "PDF Regenerator是一款开源辅助阅读工具，可帮助重新生成 有辅助信息的PDF 文件。"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pymupdf",
    "pypdf2",
    "reportlab",
    "frontend"
]

[project.urls]
Homepage = "https://github.com/Talbot3/PDFRegenerator"
Issues = "https://github.com/Talbot3/PDFRegenerator/issues"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["pdf_regenerator"]